--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/metamorpho-v1.1"]
 	path = lib/metamorpho-v1.1
 	url = git@github.com:morpho-org/metamorpho-v1.1.git
+[submodule "lib/comet"]
+	path = lib/comet
+	url = https://github.com/compound-finance/comet
